--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,9 @@
 [pytest]
 norecursedirs=.* *.egg .svn _build src bin lib local include
-python_files=test_*.py
+python_files=tests/test_*.py
 addopts = --cov inheritrix --cov-report term --cov-report html -vvv
+django_find_project=false
+DJANGO_SETTINGS_MODULE=test_settings
 
 [metadata]
 license-file = LICENSE
